# network-automation

./: .gitignore  Backup 192.168.0.1 at 2021-05-28 17:01:56.853875  Cisco.py  Core-Switch-192.168.0.5-Backup at 2021-05-28 17:02:16.006672  LICENSE  Netmiko_OOP.py  README.md  TODO  TODO.md  Ubiquiti-Edgerouter-Vyos.py  cisco.yml  dn42.yml  ent_routers.yaml  gen_configs.py  gen_deploy_yaml.py  gen_deploy_yaml_cisco.py  main.py  net_automation.py  pyproject.toml  requirements  routers.yml  setup.cfg  startup-eveng.txt
POC/: Ubiquiti-Edgerouter-Vyos.py
POC/jinja/: cisco_router.j2  devices.yml  ospfbgpint.py  vlan-int.j2  vlan-j2.py  vlans.j2  vlantest.py
j2templates/GenCisco/: gen_int.j2
j2templates/GenVyos/: gen_bgp_peer.j2  gen_bgp_prefixes.j2  gen_dhcp.j2  gen_firewalls.j2  gen_hostname.j2  gen_int.j2  gen_ospf_network.j2  gen_static.j2
net_automation/: __init__.py  j2templates.py  net_automation.py  validators.py  vyosbgp.template
src/j2templates/GenCisco/: gen_int.j2  gen_ospf_network.j2
src/net-automation/: net-automation.py
src/net-automation/j2templates/GenCisco/: gen_vlan.j2
src/net-automation/j2templates/GenVyos/: gen_firewalls.j2  gen_int.j2
src/net_automation/: j2templates.py  net_automation.py
src/net_automation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/net_automation/j2templates/GenCisco/: gen_hostname.j2
src/net_automation/j2templates/GenVyos/: gen_bgp_peer.j2  gen_ospf_network.j2
src/net_automation_usman_u.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
