[tool.poetry]
name = "network-automation-usman-u"
version = "0.1.20"
description = "An ansible-like network automation framework."
authors = ["Usman <usman@usman.network>"]

packages = [
    { include = "net_automation" }
]
[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
netmiko = "^4.1.2"
discord-webhook = "^0.17.0"
textfsm = "1.1.2"
requests = "^2.28.1"
Jinja2 = "^3.1.2"
pySMTP = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
