[metadata]
name = net-automation-usman-u
version = 0.0.6
author = Usman-U
author_email = unumer@hotmail.com
description = Network Automation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/usman-umer/network-automation
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
